change Clear button position for Address text field

--- a/OmnieCommerceAdmin/Storyboards/OrganizationAdd.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/OrganizationAdd.storyboard
@@ -203,7 +203,7 @@
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                         <textInputTraits key="textInputTraits"/>
                                                                                         <userDefinedRuntimeAttributes>
-                                                                                            <userDefinedRuntimeAttribute type="string" keyPath="fieldStyle" value="Name"/>
+                                                                                            <userDefinedRuntimeAttribute type="string" keyPath="fieldStyle" value="Address"/>
                                                                                         </userDefinedRuntimeAttributes>
                                                                                     </textField>
                                                                                 </subviews>
@@ -427,12 +427,12 @@
                     </view>
                     <connections>
                         <outlet property="customNavigationBarView" destination="aZw-0D-peo" id="3tV-xQ-2EU"/>
-                        <outlet property="emailErrorErrorMessageViewTopConstraint" destination="r3r-Y8-GE6" id="Ncd-Yj-UsE"/>
                         <outlet property="emailErrorMessageView" destination="UkU-Vg-xrb" id="2BD-56-Lra"/>
                         <outlet property="emailErrorMessageViewHeightConstraint" destination="Ucq-7G-sxK" id="46b-z8-s1z"/>
-                        <outlet property="phoneErrorErrorMessageViewTopConstraint" destination="ef9-Fn-HuK" id="YR1-KC-Sqk"/>
+                        <outlet property="emailErrorMessageViewTopConstraint" destination="r3r-Y8-GE6" id="Afz-T4-Kon"/>
                         <outlet property="phoneErrorMessageView" destination="amq-sV-S70" id="5dw-xm-hYj"/>
                         <outlet property="phoneErrorMessageViewHeightConstraint" destination="teU-Q0-Ty4" id="1T1-lf-Yke"/>
+                        <outlet property="phoneErrorMessageViewTopConstraint" destination="ef9-Fn-HuK" id="kJ8-9z-wCE"/>
                         <outlet property="scrollView" destination="zt6-5v-jFK" id="YtR-MU-qtT"/>
                         <outletCollection property="textFieldsCollection" destination="7VR-Da-7qF" collectionClass="NSMutableArray" id="6mT-UF-jNc"/>
                         <outletCollection property="textFieldsCollection" destination="pIW-yu-Tbm" collectionClass="NSMutableArray" id="O3d-pr-AkF"/>
