add Location button

--- a/OmnieCommerceAdmin/Storyboards/OrganizationAdd.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/OrganizationAdd.storyboard
@@ -197,7 +197,7 @@
                                                                                 <rect key="frame" x="0.0" y="237" width="222" height="37"/>
                                                                                 <subviews>
                                                                                     <textField opaque="NO" clipsSubviews="YES" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9kd-K1-j1H" userLabel="Address Text Field" customClass="CustomTextField" customModule="OmnieCommerceAdmin" customModuleProvider="target">
-                                                                                        <rect key="frame" x="8" y="18.5" width="214" height="19"/>
+                                                                                        <rect key="frame" x="8" y="18" width="192" height="19"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                                         <nil key="textColor"/>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -206,12 +206,28 @@
                                                                                             <userDefinedRuntimeAttribute type="string" keyPath="fieldStyle" value="Address"/>
                                                                                         </userDefinedRuntimeAttributes>
                                                                                     </textField>
+                                                                                    <button opaque="NO" clipsSubviews="YES" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pO-JP-O0s" userLabel="Location Button" customClass="CustomButton" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                                                        <rect key="frame" x="200" y="13" width="22" height="22"/>
+                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                                        <constraints>
+                                                                                            <constraint firstAttribute="width" secondItem="8pO-JP-O0s" secondAttribute="height" multiplier="1:1" id="KPr-I4-AzY"/>
+                                                                                        </constraints>
+                                                                                        <state key="normal" image="icon-location-normal"/>
+                                                                                        <userDefinedRuntimeAttributes>
+                                                                                            <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="CircleFillDarkCyan"/>
+                                                                                        </userDefinedRuntimeAttributes>
+                                                                                        <connections>
+                                                                                            <action selector="handlerLocationButtonTap:" destination="IAq-mB-24a" eventType="touchUpInside" id="5gf-nR-9SY"/>
+                                                                                        </connections>
+                                                                                    </button>
                                                                                 </subviews>
                                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                                 <constraints>
+                                                                                    <constraint firstItem="8pO-JP-O0s" firstAttribute="leading" secondItem="9kd-K1-j1H" secondAttribute="trailing" id="51u-bf-XOM"/>
                                                                                     <constraint firstItem="9kd-K1-j1H" firstAttribute="centerY" secondItem="utl-x0-jjN" secondAttribute="centerY" multiplier="1.5" id="LR2-zi-ve7"/>
+                                                                                    <constraint firstAttribute="bottom" secondItem="8pO-JP-O0s" secondAttribute="bottom" constant="2" id="WGv-NH-TZh"/>
+                                                                                    <constraint firstAttribute="trailing" secondItem="8pO-JP-O0s" secondAttribute="trailing" id="i5n-OH-Sv0"/>
                                                                                     <constraint firstItem="9kd-K1-j1H" firstAttribute="leading" secondItem="utl-x0-jjN" secondAttribute="leading" constant="8" id="iPA-a6-VUi"/>
-                                                                                    <constraint firstAttribute="trailing" secondItem="9kd-K1-j1H" secondAttribute="trailing" id="lAx-Ja-fmv"/>
                                                                                 </constraints>
                                                                                 <userDefinedRuntimeAttributes>
                                                                                     <userDefinedRuntimeAttribute type="string" keyPath="viewDesign" value="SingleBottomVeryLightGrayLine"/>
@@ -369,12 +385,14 @@
                             <constraint firstItem="h5v-pf-qR5" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="37:375" id="XHE-dx-9YP"/>
                             <constraint firstItem="18e-es-pKC" firstAttribute="width" secondItem="zUp-SK-Z2O" secondAttribute="width" multiplier="222:667" id="YMx-5O-HXu"/>
                             <constraint firstItem="aZw-0D-peo" firstAttribute="leading" secondItem="zUp-SK-Z2O" secondAttribute="leading" id="bLB-ng-86R"/>
+                            <constraint firstItem="8pO-JP-O0s" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="22:375" id="cbv-9g-hQi"/>
                             <constraint firstItem="dGL-RE-wiJ" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="273:375" id="cjO-ve-tLN"/>
                             <constraint firstItem="YAp-Ep-55a" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="98:667" id="d4n-5P-EIg"/>
                             <constraint firstItem="Yig-CM-hyu" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="37:667" id="dOH-ET-Ayi"/>
                             <constraint firstItem="18e-es-pKC" firstAttribute="width" secondItem="zUp-SK-Z2O" secondAttribute="width" multiplier="222:375" id="dPd-YK-wcV"/>
                             <constraint firstItem="dGL-RE-wiJ" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="273:667" id="hly-MO-7xz"/>
                             <constraint firstItem="lBW-kq-ZeW" firstAttribute="width" secondItem="zUp-SK-Z2O" secondAttribute="width" multiplier="222:375" id="lRO-Io-4xq"/>
+                            <constraint firstItem="8pO-JP-O0s" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="22:667" id="lge-my-Qgq"/>
                             <constraint firstItem="h1m-Bo-wVb" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="37:667" id="nS4-Mu-S9Z"/>
                             <constraint firstItem="h5v-pf-qR5" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="37:667" id="nwV-h5-EVd"/>
                             <constraint firstItem="utl-x0-jjN" firstAttribute="height" secondItem="zUp-SK-Z2O" secondAttribute="height" multiplier="37:375" id="uvE-E6-b0P"/>
@@ -393,6 +411,7 @@
                                 <exclude reference="Oeu-kd-hEa"/>
                                 <exclude reference="lRO-Io-4xq"/>
                                 <exclude reference="7ad-jk-oyB"/>
+                                <exclude reference="lge-my-Qgq"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -422,6 +441,8 @@
                                 <include reference="lRO-Io-4xq"/>
                                 <include reference="7ad-jk-oyB"/>
                                 <exclude reference="uvE-E6-b0P"/>
+                                <exclude reference="cbv-9g-hQi"/>
+                                <include reference="lge-my-Qgq"/>
                             </mask>
                         </variation>
                     </view>
@@ -448,6 +469,7 @@
     <resources>
         <image name="icon-cancel-normal" width="7" height="7"/>
         <image name="icon-empty-organization-normal" width="22" height="18"/>
+        <image name="icon-location-normal" width="22" height="22"/>
         <image name="icon-ok-normal" width="8" height="5"/>
     </resources>
 </document>
